# OpenGLDemo

./: CMakeLists.txt  README.md
src/: main.cpp
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
textures/: README.md
